[package]
name = "alpine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrow = "46.0.0"
bio = "1.4.0"
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive", "cargo"]}
polars = "0.32.1"
polars-io = "0.32.1"
tokio = { version = "1.32.0", features = ["full"] }
