[package]
name = "alpine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrow = "46.0.0"
bio = "1.4.0"
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive", "cargo"]}
clap-verbosity-flag = "2.1.1"
ctrlc = "3.4.2"
derive-new = "0.6.0"
displaydoc = "0.2.4"
distmat = "0.3.0"
polars = {version = "0.32.1", features = ["lazy", "csv", "polars-io"] }
polars-io = "0.32.1"
textdistance = "1.0.2"
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
lto = true
