[package]
name = "alpine-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "ALPINE (Anachronistic Lineage and Persistent INfection Explorer) Core Utilities"
repository = "https://github.com/nrminor/ALPINE-core"
homepage = "https://github.com/nrminor/ALPINE-core"
documentation = "https://github.com/nrminor/ALPINE-core/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]

[lib]
name = "alpine"
path = "src/lib.rs"

[[bin]]
name = "alpine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
arrow = "46.0.0"
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive", "cargo"]}
clap-verbosity-flag = "2.1.1"
ctrlc = "3.4.2"
derive-new = "0.6.0"
displaydoc = "0.2.4"
distmat = "0.3.0"
noodles = { version = "0.60.0", features = ["async", "fasta", "bgzf"] }
polars = {version = "0.32.1", features = ["lazy", "csv", "polars-io"] }
polars-io = "0.32.1"
textdistance = "1.0.2"
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
lto = true
